[package]
name = "agent-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "posture agent HTTP ingest client (uploads AssetReport + FlowBatch to fusion)"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
agent-contract = { version = "0.1.0", path = "../contract" }
serde = { workspace = true }

[lints]
workspace = true
