[package]
name = "agent-respond"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "kcatta respond: FIM, on-access malware, behavior, network IOC, IDS + config-gated active response"
readme = "README.md"

# Library + deploy bin `agent-respond`.
[lib]
name = "agent_respond"
path = "src/lib.rs"

[[bin]]
name = "agent-respond"
path = "src/main.rs"

[features]
# Sensible Linux default: FIM + behavior run unprivileged and pull no scan/pcap deps.
default = ["fim", "behavior"]
fim = []
behavior = []
# On-access malware reuses agent-detect's malware engine (fanotify needs CAP_SYS_ADMIN).
onaccess = ["dep:agent-detect"]
# Network linkage reuses agent-collect-trace capture + ThreatFeed IOC matcher.
# Its non-pcap build uses the real OS connection table; mock capture is never
# compiled into the response path.
network = [
    "dep:agent-collect-trace",
    "dep:agent-detect",
    "agent-collect-trace/winnet",
]
# Minimal built-in IDS signature engine over captured events.
ids = ["network"]
# Real libpcap capture for the network sensor (otherwise the OS connection table).
pcap = ["network", "agent-collect-trace/pcap"]
# Kernel eBPF egress blocking (cgroup connect4/6) as the netblock backend, in
# place of `nft`. Needs CAP_BPF + cgroup-v2 at runtime, and nightly + rust-src +
# bpf-linker at build time; build.rs degrades gracefully when those are absent.
# Deliberately NOT in `all` (keeps `cargo test --features all` toolchain-free).
ebpf = ["dep:aya"]
all = ["fim", "behavior", "onaccess", "network", "ids"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
clap = { workspace = true }
serde = { workspace = true }
# eBPF netblock backend (feature `ebpf`): aya loads the cgroup-connect program.
aya = { version = "0.13.1", optional = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = "0.11.0"
agent-contract = { version = "0.1.0", path = "../contract" }
# Optional detection engines used by on-access and network sensors.
agent-detect = { version = "0.1.0", path = "../detect", optional = true }
# Capability libraries reused by respond sensors, pulled only by their features.
agent-collect-trace = { version = "0.1.0", path = "../collect/trace", optional = true }

# Linux syscall surface (fanotify / inotify / signalfd / kill) via the vetted,
# safe `nix` wrappers — keeps the workspace `unsafe_code = "deny"` lint intact.
[target.'cfg(target_os = "linux")'.dependencies]
# `signal` also gates the `signalfd` module + `kill`; `fanotify`/`inotify` gate
# their sensors. All are safe wrappers (their `unsafe` is internal to nix).
nix = { version = "0.31", features = ["fanotify", "inotify", "signal"] }

[target.'cfg(unix)'.dependencies]
# Safe effective-UID lookup, O_NOFOLLOW/O_DIRECTORY constants, and an owned
# flock guard for bounded local audit appends. Linux sensor features above merge
# with these portable Unix features.
nix = { version = "0.31", features = ["fs", "user"] }

# Windows FIM (ReadDirectoryChangesW) + Ctrl-C shutdown via SAFE wrappers, same
# rationale as the `nix` block: their `unsafe` is internal to the crate, so
# agent-respond itself stays `unsafe_code = "deny"`-clean. `notify` is the
# ReadDirectoryChangesW backend; `ctrlc` wraps SetConsoleCtrlHandler.
[target.'cfg(target_os = "windows")'.dependencies]
notify = "8"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
