[package]
name = "agent-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "posture agent orchestrator: the `agent` CLI that schedules host/flow/intel-sync modules and uploads to fusion"
readme = "README.md"

# The single agent entrypoint. Subcommands dispatch to the domain crates:
#   agent host        → agent-host  (asset scan / per-asset JSON, optional ClamAV)
#   agent flow        → agent-flow  (capture + IOC match → FlowBatch)
#   agent intel-sync  → agent-flow  (download IOC feeds → local JSON)
[[bin]]
name = "agent"
path = "src/main.rs"

[features]
# Domain modules are feature-gated so a lean host-only agent build does not link
# the flow/pcap surface (and vice versa):
#   cargo build -p agent-runtime --no-default-features --features host,malware
default = ["host", "flow"]
host = ["dep:agent-host"]
flow = ["dep:agent-flow", "dep:reqwest"]
malware = ["host", "agent-host/malware"]
pcap = ["flow", "agent-flow/pcap"]
full = ["host", "flow", "malware"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
agent-contract = { version = "0.1.0", path = "../contract" }
agent-ingest = { version = "0.1.0", path = "../ingest" }
agent-host = { version = "0.1.0", path = "../host", optional = true }
agent-flow = { version = "0.1.0", path = "../flow", optional = true }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[lints]
workspace = true
