[package]
name = "trace-ebpf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "kcatta agent-trace eBPF programs: process exec/exit + file-open tracepoints (kernel side)."

# Bin-only, no library: this crate compiles ONLY for the bpf target (bpfel-unknown-none)
# and is embedded into agent-trace by aya-build. It is a workspace member so cargo can
# resolve `--package trace-ebpf`, but is excluded from `default-members` so host builds
# never touch it.
[[bin]]
name = "trace-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1.1"
ebpf-common = { path = "../ebpf-common", default-features = false }

# Note: profiles live at the workspace root (member crates' profiles are ignored).
# The bpf target forces `panic = "abort"`, and aya-build compiles with `--release`
# (opt-level 3), which is what the verifier needs.
[lints.rust]
# Kernel eBPF code is inherently unsafe; relax the workspace-wide deny here.
unsafe_code = "allow"
