[package]
name = "collector-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
collector-core = { version = "0.1.0", path = "../collector-core" }
serde_json = "1.0.150"

[lints]
workspace = true
