[package]
name = "collector-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[lints]
workspace = true

[dev-dependencies]
jsonschema = "0.46.5"
