[package]
name = "collector-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "cyber-posture collector HTTP ingest client (uploads FlowBatch to form)"

[dependencies]
anyhow = "1.0.102"
collector-core = { version = "0.1.0", path = "../collector-core" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[lints]
workspace = true
