[package]
name = "collector-intel-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Download remote IOC feeds into local JSON for collector ThreatFeed"

[[bin]]
name = "collector-intel-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
collector-core = { version = "0.1.0", path = "../collector-core" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }

[lints]
workspace = true
