[package]
name = "fusion-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "posture fusion data contract: host AssetReport + network FlowBatch (Rust mirror of form schemas)"

readme = "README.md"

[dependencies]
chrono = { workspace = true, features = ["serde", "clock", "std"] }
serde = { workspace = true }

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
