[package]
name = "fusion-flow-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "posture network flow collector CLI (capture, match, emit/upload FlowBatch)"
readme = "README.md"

[[bin]]
name = "fusion-flow"
path = "src/main.rs"

[features]
default = []
pcap = ["fusion-flow/pcap"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fusion-flow = { version = "0.1.0", path = "../fusion-flow" }
fusion-ingest = { version = "0.1.0", path = "../fusion-ingest" }
serde_json = "1.0.150"

[lints]
workspace = true
